<resources>
    <string name="app_name" translatable="false">龙之游</string>

    <!-- TODO_XBB: Remove or change this placeholder text -->
    <!--二维码扫描-->

    <!--<string name="viewfinderview_status_text2">即可自动扫描</string>-->
    <!--登录/注册-->
    <string name="login" translatable="false">登录</string>

    <string name="account" translatable="false">账号</string>
    <string name="phone_num">手机号码</string>
    <string name="account_phone_num" translatable="false">手机号 / 会员卡号</string>
    <string name="password" translatable="false">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_input_tel">请输入您的手机号码</string>
    <string name="please_input_name">请输入您的姓名</string>
    <string name="please_input_id">请输入您的身份证号码</string>
    <string name="please_input_driving">请输入您的驾照档案编号</string>
    <string name="get_code">获取验证码</string>
    <string name="msg_code" translatable="false">短信验证码</string>
    <string name="error_input_tel" translatable="false">请填写正确的手机号码</string>
    <string name="phone_fast_login">手机快捷登录</string>
    <string name="account_login" translatable="false">账号密码登录</string>
    <string name="tel_number">电话号码</string>
    <string name="vericode">验证码</string>
    <string name="register">手机号快速注册</string>
    <string name="name" translatable="false">姓名：</string>
    <string name="phone">手机号</string>
    <string name="id" translatable="false">身份证号码</string>
    <string name="referrer">推荐人龙码</string>
    <string name="input_id" translatable="false">请输入您本人身份证号码，绑定后，不可更改</string>
    <string name="input_referrer" translatable="false">请输入推荐人龙码</string>
    <string name="text1">*为了您的账户安全，请准确输入姓名、身份证号码、推荐人龙码!</string>

    <string name="user_name">您的姓名</string>
    <string name="user_phone">手机号码</string>
    <string name="user_id">身份证号码</string>
    <string name="user_driving">驾照档案编号</string>

    <string name="rent_motorhome">租房车</string>
    <string name="driving_type" translatable="false">准驾类型</string>
    <string name="person_number">核载人数</string>
    <string name="website">挂靠网点</string>
    <string name="bed_number" translatable="false">床数</string>

    <string name="get_car_time">提车时间</string>
    <string name="set_car_time">还车时间</string>
    <string name="get_car_type">提车方式</string>
    <string name="set_car_type">还车方式</string>
    <string name="get_car_address">默认提车位置</string>
    <string name="set_car_address">默认还车位置</string>
    <string name="person_inf">提车人实名信息</string>

    <string name="sure_pay">确认支付</string>
    <string name="pay">支付</string>
    <string name="need_pay" translatable="false">还需支付：</string>
    <string name="total">总计</string>
    <string name="scan_title">扫一扫</string>

    <string name="fangche_desplay" translatable="false">房车展示</string>
    <string name="hq_route" translatable="false">精品线路</string>
    <string name="hq_route_detail" translatable="false">房车旅游路线</string>
    <string name="dragon_market" translatable="false">龙珠商城</string>
    <string name="personal_center">龙之游</string>
    <string name="drive_insurance" translatable="false">自驾保险</string>
    <string name="tour_abroad">出境旅游</string>
    <string name="tour_visa">旅游签证</string>
    <string name="ticket_book">机票预订</string>

    <!-- WXPayEntryActivity -->
    <string name="app_tip" translatable="false">提示</string>

    <string name="pay_motorhome_hint">提车前5天及以上取消预约，退返已预约的全部房车券；\n提车前3天及以上取消预约，退返所预约房车券的一半；\n（注：如取消3天扣除一半是1.5天，则系统将自动扣除2天）\n提车前2天之内（含）取消预约的，不退返所预约的房车券</string>
</resources>
