<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_line_bottom_1dp"
              android:orientation="horizontal">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        fresco:actualImageScaleType="centerInside"
        fresco:failureImage="@mipmap/no_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="车型"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/driving_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/driving_permi"
                android:text="@string/driving_type"
                android:textColor="@color/gray_999"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/bed_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/bed_number"
                android:text="@string/bed_number"
                android:textColor="@color/gray_999"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/bear_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@mipmap/load_number"
            android:text="@string/person_number"
            android:textColor="@color/gray_999"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray_999"
            android:textSize="14sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:paddingBottom="2dp"
                android:text="元/天"
                android:textColor="@color/red"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/text"
                android:text="价格"
                android:textColor="@color/red"
                android:textSize="16sp"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>