<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_line_00ffffff_bottom_1dp"
            android:orientation="horizontal"
            android:paddingBottom="5dp">


            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tel_number"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_999"
                android:textSize="@dimen/text_tittle"/>

            <Button
                android:id="@+id/tv_getcode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/border_yellow_bg_yellow_round"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/get_code"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_line_00ffffff_bottom_1dp"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/edt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/msg_code"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="6"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_999"
                android:textSize="@dimen/text_tittle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_line_00ffffff_bottom_1dp"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/edt_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ellipsize="end"
                android:hint="真实姓名"
                android:longClickable="false"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_999"
                android:textSize="@dimen/text_tittle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="16"
                android:minLines="6"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_999"
                android:textSize="@dimen/text_tittle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <TextView
            android:id="@+id/tv_xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_999"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/b_button_color_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="完成注册"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>